--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 <br>
 <br>
 <br>
-<p align="center">he is billy.</p>
+<p align="center"><span class="color_11">HE IS BILLY</span></p>
+<br>
+<p align="center">HE IS THE BEST OF ALL BILLYS. DO NOT DENY IT. OK? YOU UNDERSTAND ME? YES? OK.</p>
 </div>
 </body>
 </html>
